test/Fail/Issue3139.agda

postulate
  [_…_] : Set → Set → Set
