test/Fail/Issue3139.err
Issue3139.agda:3.9: error: [ParseError]
in the name [_…_], the part … is not valid because it is used for function clauses
